--- a/portfolio personal/index.css
+++ b/portfolio personal/index.css
@@ -60,7 +60,7 @@ html{
 /* SECCION INICIO */
 .inicio{
     background: linear-gradient(to top,rgba(30,35,38,.8), rgba(30,35,38,1));
-    background-image: url('fondonegro.png');
+    background-image: url('fondonegrotra.png');
     background-size: cover;
     margin-top: -50px;
     height: 150vh;
@@ -173,7 +173,7 @@ html{
     color: cyan;
     padding: 50px 20px;
 }
-.galeria .containerSECCION{
+.galeria .containerGALERIA{
     max-width: 1100px;
     margin: auto;
 }
@@ -181,37 +181,51 @@ html{
     font-size: 40px;
     text-align: center;
     margin-bottom: 40px;
-    font-family: 'Righteous';
+    font-family: 'Righteous',sans-serif;
     padding: 20px;
 }
-.galeria .containerSECCION .fila{
+.galeria .containerimg {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
 }
-.galeria .containerSECCION .fila .col{
+.galeria .containerimg .col{
     width: 33.3%;
+    margin-bottom: 20px;
 }
-.galeria .containerSECCION .fila .col img{
+.galeria .containerimg  .col img{
     width: 100%;
-    vertical-align: top;
+    height: 200px;
+    transition: transform 0.5s ease;
     border-radius: 10px;    
+    object-fit: cover;
 }   
-.galeria .containerSECCION .fila .col video{    
-    width: 100%;                                        
-    vertical-align: top;
+.galeria .containerimg .col video{    
+    width: 100%;        
+    height: 200px;                                
+    transition: transform 0.5s ease;
     border-radius: 10px;
+    object-fit: cover;
 }
-.galeria .containerSECCION .fila .col p{
+.galeria .containerimg .col img:hover, 
+.galeria .containerimg .col video:hover {
+    transform: scale(1.05); 
+}
+.galeria .containerimg .fila .col p{
     text-align: center;
     margin: 20px 0;
     font-weight: bold;
 }   
-.galeria .containerSECCION .fila .col a{    
+.galeria .containerimg .fila .col a{    
     text-align: center;
     margin: 20px 0;                                        
     font-weight: bold;
     color: cyan;
     text-decoration: none;
 }
-.galeria .containerSECCION .fila .col a:hover{
+.galeria .containerimg .fila .col a:hover{
     text-decoration: underline;
 }
+
+
